# suzume-sql

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  example-config.toml  normal-sql.toml
.github/workflows/: ci.yml
src/: clipboard.rs  config.rs  error.rs  input.rs  main.rs  worker.rs
src/app/: completion.rs  conn_form.rs  editor.rs  finder.rs  inspect.rs  mod.rs  picker.rs  state.rs
src/db/: mod.rs  mysql.rs  postgres.rs  query.rs  sqlite.rs
src/model/: delta.rs  mod.rs  schema.rs  value.rs
src/ui/: conn_form.rs  grid.rs  inspect.rs  mod.rs  picker.rs
