[package]
name = "normal-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
# Vim-style text editor widget for the query pane. Default features pull in
# clipboard (arboard → X11/image) and syntect; we only need the keyboard editor.
edtui = { version = "0.11.3", default-features = false }
fuzzy-matcher = "0.3.7"
postgres = "0.19.14"
ratatui = "0.30.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
