[package]
name = "suzume-sql"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Alexrp02/suzume-sql"
keywords = ["database", "tui", "sql", "mysql", "postgres"]
categories = ["command-line-utilities", "database"]
license = "GPL-3.0-or-later"

[[bin]]
name = "suzume"
path = "src/main.rs"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
bytes = "1"
crossterm = "0.29.0"
dirs = "6.0.0"
# Vim-style text editor widget for the query pane. Default features pull in
# clipboard (arboard → X11/image) and syntect; we only need the keyboard editor.
edtui = { version = "0.11.3", default-features = false }
fuzzy-matcher = "0.3.7"
mysql = { version = "28.0.0", default-features = false, features = ["minimal-rust", "derive", "buffer-pool"] }
postgres = "0.19.14"
ratatui = "0.30.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
thiserror = "2.0.18"
toml = "1.1.2"
